2003-10-06  Martin Baulig  <martin@ximian.com>

	* class.c (inflate_generic_method): Renamed to
	mono_class_inflate_generic_method() and made public.
	(mono_class_init): Don't inflate the generic methods here.
	(mono_class_from_generic): Added `gboolean inflate_methods'
	argument.  Inflate the methods here.

	* loader.c (mono_method_get_param_names): Ignore instances of
	generic types for the moment.

	* reflection.c (fixup_method): Added support for inflated methods.
	(mono_image_create_token): Use mono_image_get_methodref_token()
	for inflated methods.
	(mono_custom_attrs_from_param): Ignore instances of generic types
	for the moment.
	(mono_reflection_bind_generic_parameters): New public function.
	Moved all the functionality from
	ves_icall_Type_BindGenericParameters() here and added support for
	dynamic types.
	(mono_reflection_define_generic_parameter): Initialize
	`klass->methods' here.

	* icall.c (ves_icall_Type_BindGenericParameters): Moved all the
	functionality into mono_reflection_define_generic_parameter().
	(ves_icall_Type_GetGenericTypeDefinition): If we're coming from a
	TypeBuilder, return that TypeBuilder.

2003-10-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* appdomain.c: removed mono_delegate_semaphore.

	* threadpool.c:
	(mono_thread_pool_add): moved hash table creation inside and the thread 
	creation outside of the critical region.
	(mono_thread_pool_finish): removed obsolete code.
	(async_invoke_thread): don't use the semaphore. Use a plain Sleep and
	continue or exit the thread depending on the queue.

2003-10-07  Bernie Solomon  <bernard@ugsolutions.com>

	* metadata.c (mono_type_to_unmanaged): allow bools to marshal as I1
	marshal.c (emit_ptr_to_str_conv & mono_marshal_get_native_wrapper):
        handle more bool marshalling options

2003-10-07  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c (mono_marshal_get_native_wrapper): Fix marshalling of
	arrays of structs. Also add a more descriptive error message when